--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+body { font-family: 'Raleway', sans-serif;}
+
 *{
     margin: 0;
     padding: 0;
@@ -14,23 +16,23 @@ nav{
     flex: 1;
     text-align: right;
 }
-
-nav ul{
+nav ul {
     display: inline-block;
     list-style-type: none;
 }
 
-nav ul li{
+nav ul li {
     display: inline-block;
+    margin-right: 20px;
 }
 
 a{
-text-decoration: solid;
-color: green;
+    text-decoration: none;
+    color: green;
 }
 
 p{
-color: green;
+    color: green;
 }
 
 .container{
@@ -39,3 +41,52 @@ color: green;
     padding-left: 25px;
     padding-right: 25px;
 }
+
+.row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.col-2{
+    flex-basis: 50%;
+    min-width: 300px;
+}
+
+.col-2 img{
+    max-width: 100%;
+    padding: 50px 0;
+}
+
+.col-2 h1{
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+}
+
+.btn{
+    display: inline-block;
+    background: green;
+    color: yellow;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: 0.5s;
+}
+
+.btn :hover{
+    background: green;
+}
+
+
+
+.header{
+    border-radius: 25px;
+}
+
+.header .row{
+    margin-top: 70px;
+}
+
+
