--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-body { font-family: 'Raleway', sans-serif;}
+body { 
+    font-family: 'Raleway', sans-serif;
+    background-image: url(Images/mainpage.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
 
 *{
     margin: 0;
@@ -28,7 +34,7 @@ nav ul li {
 
 a{
     text-decoration: none;
-    color: green;
+    color: white;
 }
 
 p{
@@ -47,6 +53,8 @@ p{
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+    /* position: absolute; */
+    /* top: 200px; */
 }
 
 .col-2{
@@ -89,4 +97,49 @@ p{
     margin-top: 70px;
 }
 
+/* memberships */
+.categories {
+ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 450px;
+    width: 100%;
+   
 
+}
+/* main background pic */
+#mainpage {
+    width: 100%;
+}
+.col-3 {
+    width: 150px;
+}
+
+#dollars, #donations, #life, #brick, #GCKY {
+    width: 50%;
+    
+}
+/* Images */
+#GCKYdiv, #brick, #donations, #dollars {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: inherit;
+    width: 20%;
+    /* top: 20px;
+    left: 250px; */
+}
+
+#brick {
+    
+}
+
+/* button with images */
+.button {
+    width: 25%;
+    position: relative;
+    bottom: 5px;
+}
