--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ p {
     width: 20%;
     /* top: 20px;
     left: 250px; */
+    color: gray;
 }
 
 #brick {
@@ -167,6 +168,7 @@ p {
     width: 25%;
     position: relative;
     bottom: 5px;
+   
 }
 
 
@@ -187,3 +189,68 @@ p {
     align-items: center;
     justify-content: center;
 } */
+
+footer {
+    position: relative;
+    width: 100%;
+    background: #67963a;
+    height: 20vh;
+    padding: 2.5px 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+footer .social_icon,
+footer .menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2.5px 0;
+}
+
+footer .social_icon li,
+footer .menu li {
+    list-style: none;
+}
+
+footer .social_icon li a {
+    font-size: 2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+footer .social_icon li a:hover {
+    transform: translateY(-10px);
+}
+
+footer .menu li a {
+    font-size: 1.2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+}
+
+footer .menu li a:hover {
+    opacity: 10;
+}
+
+footer p {
+    color: #fff;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 0.8em;
+}
+
+footer{
+    position: fixed;
+    bottom: 100%;
+}
